flux/infra/observability/grafana/ingressroute-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.sovereign.internal`)
      kind: Rule
      services:
        - name: grafana
          port: 80
      middlewares:
        - name: grafana-basic-auth
  tls:
    secretName: grafana-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-basic-auth
  namespace: observability
spec:
  basicAuth:
    secret: grafana-credentials
